# crucible

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_BRIEF.md  README.md  TODO.md  pyproject.toml
docs/: completed_features.md  future_tokenizer_and_chat.md  product_description.md  roadmap.md  training_methods_reference.md
docs/plans/: 2026-03-06-remote-dataset-sync-design.md  2026-03-06-remote-dataset-sync-plan.md  2026-03-09-remote-eval-design.md  2026-03-09-remote-eval-plan.md  2026-03-11-ui-overhaul-design.md  2026-03-11-ui-overhaul-plan.md
src/: crucible.py  crucible_sdk.py  forge.py
src/cli/: __init__.py  ab_chat_command.py  activation_patching_command.py  activation_pca_command.py  agent_command.py  benchmark_command.py  benchmark_registry_command.py  chat_command.py  cloud_command.py  compare_command.py  compute_command.py  cost_command.py  curate_command.py  data_commands.py  deploy_command.py  dispatch_command.py  distillation_command.py  distributed_train_command.py  domain_adapt_command.py  dpo_command.py  eval_command.py  experiment_command.py  export_spec_command.py  gguf_export_command.py  grpo_command.py  hardware_profile_command.py  hf_export_command.py  hub_command.py  job_command.py  judge_command.py  kto_command.py  linear_probe_command.py  logit_lens_command.py  lora_command.py  main.py  merge_command.py  model_command.py  model_command_handlers.py  model_health_command.py  multimodal_command.py  (+27 more)
src/compute/: compute_target.py  cost_estimator.py  local_executor.py
src/core/: activation_pca_types.py  (+51 more)
studio-app/: README.md  TODO-multi-model-training.md  index.html  package-lock.json  package.json
test-datasets/: dataset_a_raw_text.jsonl  dataset_b_sft.jsonl  dataset_c_preference.jsonl  dataset_d_kto.jsonl  dataset_e_grpo.jsonl  dataset_f_rlvr.jsonl
tests/: conftest.py  e2e_phase1_datasets.py  e2e_phase2_training.py  e2e_sweep.py  e2e_watgpu_test.py
(+783 files in other folders)
