[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.1.0"
description = "Crucible phase-one MVP for ML training data pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
serve = [
    "torch>=2.6.0",
    "transformers>=4.41.0",
    "trl>=0.29.0",
    "peft>=0.18.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=1.0.0",
    "safetensors>=0.4.0",
    "datasets>=3.0.0",
    "tokenizers>=0.22.0",
    "matplotlib>=3.10.0",
    "numpy<2",
    "pyyaml>=6.0",
    "lm-eval>=0.4.11",
]
onnx = ["onnx>=1.17.0", "onnxruntime>=1.20.0", "optimum[onnxruntime]>=1.23.0"]
gguf = ["gguf>=0.6.0"]
s3 = ["boto3>=1.37.0"]
remote = ["paramiko>=3.5.0"]
lance = ["pylance>=0.23.0", "pyarrow>=19.0.0"]
logging = ["structlog>=25.1.0"]
mcp = ["mcp>=1.0.0"]

[project.scripts]
crucible = "cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
exclude = ["^tests/"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "boto3",
  "boto3.*",
  "structlog",
  "lance",
  "pyarrow",
  "torch",
  "torch.*",
  "matplotlib",
  "matplotlib.*",
  "onnx",
  "onnxruntime",
  "optimum",
  "optimum.*",
  "numpy",
  "tokenizers",
  "paramiko",
  "paramiko.*",
  "datasets",
  "gguf",
  "safetensors",
  "safetensors.*",
  "transformers",
  "transformers.*",
  "trl",
  "trl.*",
  "peft",
  "peft.*",
  "bitsandbytes",
  "accelerate",
  "mcp",
  "mcp.*",
]
ignore_missing_imports = true
